todo for Smart Groceries - Group 9

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,8 @@
-text
+# Group Leader: 
+-> RAHMAN, SAIYDUR
+
+#Contributiors:
+-> JAMAN, SAFKAT
+-> JABER, ABDULLAH AL
+-> HASAN KHAN, NASIF
+-> RAFI, TAWHID HASAN
