--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,5 @@
 -> JABER, ABDULLAH AL
 -> HASAN KHAN, NASIF
 -> RAFI, TAWHID HASAN
+
+I see, you people are trying to be coders and developers. Good Good keep up the good work. 
